--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "vue-google-oauth2": "^1.5.8",
     "vue-i18n": "^8.24.0",
     "vue-loading-overlay": "^3.4.2",
-    "vue-quill-editor": "^3.0.6"
+    "vue-quill-editor": "^3.0.6",
+    "vuetify": "^2.6.4"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.12",
