Update container name

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,4 +31,4 @@ deploy-production:
   before_script:
     - chmod -R 700 $SSH_PRIVATE_KEY
   script:
-    - ssh -i $SSH_PRIVATE_KEY -o "StrictHostKeyChecking=no" ubuntu@188.121.111.163 -t "docker rm -f frontend && docker pull $IMAGE_URL && docker run -d -p 127.0.0.1:3001:80 --name=aic_frontend $IMAGE_URL"
+    - ssh -i $SSH_PRIVATE_KEY -o "StrictHostKeyChecking=no" ubuntu@188.121.111.163 -t "docker rm -f aic_frontend && docker pull $IMAGE_URL && docker run -d -p 127.0.0.1:3001:80 --name=aic_frontend $IMAGE_URL"
