--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vue-google-oauth2": "^1.5.8",
     "vue-i18n": "^8.24.0",
     "vue-loading-overlay": "^3.4.2",
+    "vue-persian-datetime-picker": "^2.10.4",
     "vue-quill-editor": "^3.0.6",
     "vuetify": "^2.6.4"
   },
