--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,56 +1,34 @@
 stages:
   - build
-  - deploy
+  - deploy-production
 
-.stg-vars:
-  variables:
-    ENVIRONMENT: stg
-    IMAGE_URL: ${DOCKER_REGISTRY}/aic22-frontend:stg
-    SWARM_MASTER_NODE: ${STG_SWARM_MASTER_NODE}
+workflow:
   rules:
-    - if: '$CI_COMMIT_BRANCH == "add-production-deployment"'
-
-.production-vars:
-  variables:
-    ENVIRONMENT: production
-    IMAGE_URL: ${DOCKER_REGISTRY}/aic22-frontend:${CI_COMMIT_SHORT_SHA}
-    SWARM_MASTER_NODE: ${PRD_SWARM_MASTER_NODE}
-  rules:
+    - if: '$CI_PIPELINE_SOURCE == "push" && $CI_COMMIT_REF_PROTECTED == "false"'
+      when: never
     - if: '$CI_COMMIT_BRANCH == "master"'
+      when: always
+    - if: '$CI_COMMIT_BRANCH == "test"'
+      when: always
+    - when: never
 
-.build:
+variables:
+  IMAGE_URL: reg.aichallenge.ir/aic22-frontend:stg 
+
+build:
   stage: build
-  image: ${DOCKER_REGISTRY}/docker:19.03.12
+  image: reg.aichallenge.ir/docker:19.03.12
   tags:
     - docker
   script:
-    - docker build . -t ${IMAGE_URL}
-    - docker push ${IMAGE_URL}
+    - docker build . -t $IMAGE_URL
+    - docker push $IMAGE_URL
 
-.deploy:
-  stage: deploy
+
+deploy-production:
+  stage: deploy-production
+  image: kroniak/ssh-client:latest
   before_script:
     - chmod -R 700 $SSH_PRIVATE_KEY
-    - ssh -i $SSH_PRIVATE_KEY -o "StrictHostKeyChecking=no" ${SWARM_MASTER_NODE} -t "docker pull ${IMAGE_URL}"
-  script:
-    - ssh -i $SSH_PRIVATE_KEY -o "StrictHostKeyChecking=no" ${SWARM_MASTER_NODE} -t "docker service update --image ${IMAGE_URL} aic_frontend_${ENVIRONMENT}"
-
-stg-build:
-  extends:
-    - .stg-vars
-    - .build
-
-production-build:
-  extends:
-    - .production-vars
-    - .build
-
-stg-deploy:
-  extends:
-    - .stg-vars
-    - .deploy
-
-production-deploy:
-  extends:
-    - .production-vars
-    - .deploy
+  # script:
+  #   - ssh -i $SSH_PRIVATE_KEY -o "StrictHostKeyChecking=no" ubuntu@188.121.111.163 -t "docker rm -f aic_frontend && docker pull $IMAGE_URL && docker run -d -p 127.0.0.1:3001:80 --name=aic_frontend $IMAGE_URL"
