--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@nuxtjs/auth-next": "^5.0.0-1648802546.c9880dc",
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/markdownit": "^2.0.0",
@@ -29,7 +30,7 @@
     "markdown-it-div": "^1.1.0",
     "markdown-it-toc-done-right": "^4.2.0",
     "nuxt": "^v2.15.3",
-    "vue-google-oauth2": "^1.5.8",
+    "vue-google-oauth2": "^1.5.5",
     "vue-i18n": "^8.24.0",
     "vue-loading-overlay": "^3.4.2",
     "vue-persian-datetime-picker": "^2.10.4",
