--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nuxtjs/toast": "^3.3.0",
     "@nuxtjs/vuetify": "^1.11.3",
     "cookie-universal-nuxt": "^2.1.4",
+    "dotenv": "^16.0.1",
     "front-matter": "^4.0.2",
     "linkify-it": "^3.0.2",
     "markdown-it": "^12.0.4",
