Handle MODE variable at build time

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ stages:
 .stg-vars:
   variables:
     ENVIRONMENT: stg
+    MODE: s
     IMAGE_URL: ${DOCKER_REGISTRY}/aic22-frontend:stg
     SWARM_MASTER_NODE: ${STG_SWARM_MASTER_NODE}
   rules:
@@ -13,6 +14,7 @@ stages:
 .production-vars:
   variables:
     ENVIRONMENT: prod
+    MODE: p
     IMAGE_URL: ${DOCKER_REGISTRY}/aic22-frontend:${CI_COMMIT_SHORT_SHA}
     SWARM_MASTER_NODE: ${PRD_SWARM_MASTER_NODE}
   rules:
@@ -24,7 +26,7 @@ stages:
   tags:
     - docker
   script:
-    - docker build . -t ${IMAGE_URL}
+    - docker build . --build-args MODE=${MODE} -t ${IMAGE_URL}
     - docker push ${IMAGE_URL}
 
 .deploy:
