--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "markdown-it-toc-done-right": "^4.2.0",
     "nuxt": "^v2.15.3",
     "vue-google-oauth2": "^1.5.5",
+    "vue-gtag": "^2.0.1",
     "vue-i18n": "^8.24.0",
     "vue-loading-overlay": "^3.4.2",
     "vue-persian-datetime-picker": "^2.10.4",
