--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nuxtjs/svg": "^0.1.12",
     "@nuxtjs/toast": "^3.3.0",
     "@nuxtjs/vuetify": "^1.11.3",
+    "@vue/shared": "^3.2.37",
     "cookie-universal-nuxt": "^2.1.4",
     "dotenv": "^16.0.1",
     "front-matter": "^4.0.2",
@@ -32,6 +33,7 @@
     "markdown-it-toc-done-right": "^4.2.0",
     "nuxt": "^v2.15.3",
     "vue-google-oauth2": "^1.5.5",
+    "vue-gtag": "^2.0.1",
     "vue-i18n": "^8.24.0",
     "vue-loading-overlay": "^3.4.2",
     "vue-persian-datetime-picker": "^2.10.4",
