--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
     "markdown-it-attrs": "^4.0.0",
     "markdown-it-div": "^1.1.0",
     "markdown-it-toc-done-right": "^4.2.0",
+    "moment-timezone": "^0.5.34",
     "nuxt": "^v2.15.3",
     "vue-google-oauth2": "^1.5.5",
     "vue-gtag": "^1.16.1",
     "vue-i18n": "^8.24.0",
+    "vue-jalali-moment": "^1.0.0",
     "vue-loading-overlay": "^3.4.2",
+    "vue-moment": "^4.1.0",
     "vue-persian-datetime-picker": "^2.10.4",
     "vue-quill-editor": "^3.0.6",
     "vuetify": "^2.6.4"
