--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "markdown-it-attrs": "^4.0.0",
     "markdown-it-div": "^1.1.0",
     "markdown-it-toc-done-right": "^4.2.0",
+    "moment": "^2.29.4",
     "moment-timezone": "^0.5.34",
     "nuxt": "^v2.15.3",
     "vue-google-oauth2": "^1.5.5",
